--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,20 @@ pytest==3.0.5
 pytest-cov==2.4.0
 
 
+# Additional Dependencies
+bcrypt==3.1.4
+blinker==1.4
+certifi==2016.2.28
+cffi==1.11.5
+Flask-Bcrypt==0.7.1
+Flask-Mail==0.9.1
+Pillow==5.3.0
+pycparser==2.18
+six==1.11.0
+SQLAlchemy==1.2.7
+WTForms==2.1
+
+
 # additional packages
 # pip install email_validator
 # pip install werkzeug==0.16.0
